# haskell-geo-resolver

./: .gitignore  .travis.yml  GeoResolver.cabal  LICENSE  README.md  geo-resolver.cabal  stack.yaml
src/: GeoResolver.hs
src/GeoResolver/: Parser.hs  Requester.hs
src/Internal/: Parser.hs  Requester.hs
src/Network/Google/: GeoResolver.hs
src/Network/Google/GeoResolver/: Parser.hs  Requester.hs
test/: Spec.hs
