name:                geo-resolver
version:             0.1.0.1
synopsis:            Performs geo location lookups and parses the results 
description:         Please see README.md
homepage:            http://github.com/githubuser/GeoResolver#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Greve
maintainer:          jg@markenwerk.net
copyright:           2015 Jan Greve, Markenwerk GmbH
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GeoResolver, GeoResolver.Parser, GeoResolver.Requester
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 0.8.0.2 && < 1,
                       http-conduit >= 2.1.8 && < 2.2,
                       bytestring,
                       unordered-containers,
                       text,
                       http-types,
                       blaze-builder
  default-language:    Haskell2010

test-suite GeoResolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       geo-resolver,
                       bytestring,
                       HUnit,
                       base64-bytestring >= 1 && < 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.markenwerk.net/werkstuecke/HaskellGeoResolver.git
